--- a/templates/books_list.html
+++ b/templates/books_list.html
@@ -1,7 +1,12 @@
+<center>
 {% for i in book_all %}
-
+<button><a href="/create_book_qoute">Добавить</a></button>
+<br><br>
 <img src="{{ i.cover_image.url }}" alt="" width="300" height="400">
 <h1>{{ i.title_books }}</h1>
 <p> <a href="/book_list/{{ i.id }}">Подробнее</a> </p>
+<p> <a href="/book_list/{{ i.id }}/edit">Редактировать</a> </p>
+<p> <a href="/book_list/{{ i.id }}/delete">Удалить</a> </p>
 
 {% endfor %}
+</center>
